editing based on redline

--- a/brhstaging.data-commons.org/dashboard/Public/index.html
+++ b/brhstaging.data-commons.org/dashboard/Public/index.html
@@ -234,7 +234,7 @@
                             </p>
                             <ul>
                                 <li>
-                                    Data can be easily exported to various workspaces for analysis using a variety of software tools.
+                                    Data can be easily exported to various workspaces for analyses using a variety of software tools.
                                 </li>
                             </ul>
                             <p>
@@ -1732,7 +1732,7 @@
                                         <img class="drop-shadow" src="img/profile_APIkey_created.png" alt="profile_APIkey_created" style="width:90%">
                                         <figcaption>
                                             Download the API key as json file and note the directory where the API key was saved for step 6.
-                                        </figcaption> 
+                                        </figcaption>
                                         <br><br>
                                     </li>
                                     <li>
