Readding images ommitted to staging. Revised based on edits requested.

--- a/brhstaging.data-commons.org/dashboard/Public/index.html
+++ b/brhstaging.data-commons.org/dashboard/Public/index.html
@@ -71,9 +71,10 @@
                 </div>
                 <div class="ul-sidenav">
                     <a href="#PlatformOverview">a) BRH Overview</a>
-                    <a href="#RegisterForWorkspaces">b) Register for Workspaces - STRIDES</a>
+                    <a href="#RegisterForWorkspaces">b) Register for Workspaces</a>
                     <div class="ul-sidenav-sub-sub">
-                        <a href="#HowToRegisterGuideline">Guideline how to register for Workspace Access</a>
+                        <a href="#HowtoRegisterTempGuideline">Guideline how to register for Temporary Workspace Access</a>
+                        <a href="#HowtoRegisterPermGuideline">Guideline how to register for more Permanent Workspace Access</a>
                     </div>
 
                     <a href="#LoginPage">c) Login Page</a>
@@ -412,8 +413,8 @@
                                     <li>
                                         <a href="#RegisterForWorkspaces" style="background-image: url('img/brh-portal-login-strides.png');"></a>
                                         <div class="details">
-                                            <h6><a href="#RegisterForWorkspaces">Register for Workspaces - STRIDES</a></h6>
-                                            <p class="image-author">Register workspace access with NIH STRIDES to start your journey on the Biomedical Research Hub.</p>
+                                            <h6><a href="#RegisterForWorkspaces">Register for Workspaces</a></h6>
+                                            <p class="image-author">Get a temporary free trial to BRH workspaces and parallely register for more permanent workspace access with NIH STRIDES.</p>
                                         </div>
                                     </li>
                                     <li>
@@ -464,10 +465,40 @@
                                 </ul>
                             </p>
 
-                            <h3 id="RegisterForWorkspaces" class="section-title">b) Register for Workspaces - STRIDES</h3>
+                            <h3 id="RegisterForWorkspaces" class="section-title">b) Register for Workspaces</h3>
                             <p>
-                                After receiving an invitation via email, users need to request for a <span style="font-weight: bold;">workspace account</span> to work in the workspaces of the BRH, see below for a guideline.
+                                To start exploring BRH Workspaces right away, users can apply for a) temporary trial access to BRH workspaces, b) more permanent access to BRH workspaces using NIH STRIDES.The more permanent access to BRH Workspaces is granted using the NIH STRIDES workspace account, and takes a few weeks to be fully approved. Please see below for more details.
                             </p>
+
+                           <h4 id="HowtoRegisterTempGuideline" class="section-title">Guidelines for Temporary Trial Access to BRH Workspaces</h4>
+                           
+                           <p>
+                            For new users without workspace access, please follow these steps
+                           </p>
+                           <ol>
+                            <li>Login to <a href="https://brhstaging.data-commons.org/login/">BRH</a></li>
+                            <li>Click on <a href="https://brhstaging.data-commons.org/workspace">workspace tab</a>. That opens a workspace registration form</li>
+                            <li>Fill in the details and submit the form shown below.</li>
+                             <br> <br>
+                                    <img class="drop-shadow" src="img/workspace_access_form.png" alt="workspace_access_form" style="width:80%">
+                                    <figcaption style="width:100%">
+                                        Workspace access form.
+                                    </figcaption> <br> <br>
+                            <li>The form should be filled out only once.  Following submission, users should see a success message and a link back to the Discover page.</li>
+                             <br> <br>
+                                    <img class="drop-shadow" src="img/workspace_access_success.png" alt="workspace_access_success" style="width:80%">
+                                    <figcaption style="width:100%">
+                                        Submission for access successful message.
+                                    </figcaption> <br> <br>
+                            <li>Users should receive an email notifying them that the request has been received.</li>
+                            <li>Once the temporary trial request is approved, users will get another email notifying them of approval.  They should be able to access the workspace then.  The timeline for approval is typically a few days.</li>
+                           </ol>
+
+
+                            <!--<p>
+                                After receiving an invitation via email, users need to request for a <span style="font-weight: bold;">workspace account</span> to work in the workspaces of the BRH, see below for a guideline.
+                            </p> -->
+                            <h4 id="HowtoRegisterPermGuideline" class="section-title">Guidelines for a more permanent Access to BRH Workspaces using STRIDES</h4>
                             <p>
                                 The workspace account is handled with the help of <span style="font-weight: bold;">NIH STRIDES</span> (NIH <span style="font-weight: bold;">S</span>cience and
                                 <span style="font-weight: bold;">T</span>echnology <span style="font-weight: bold;">R</span>esearch <span style="font-weight: bold;">I</span>nfrastructure for <span style="font-weight: bold;">D</span>iscovery,
@@ -479,16 +510,16 @@
                             </p>
                             <p>
                                 NIH-funded researchers with an active NIH award may take advantage of the STRIDES Initiative for their NIH-funded research projects. Eligible researchers include NIH intramural researchers and awardees of NIH contracts, other transaction agreements, grants,
-                                cooperative agreements, and other agreements. More information on NIH STRIDES and how to gain access can be found <a href="https://datascience.nih.gov/strides">here</a>.
+                                cooperative agreements, and other agreements. More information on NIH STRIDES and how to gain access can be found <a href="https://datascience.nih.gov/strides">here</a>.  Please see below for registration steps
                             </p>
 
 
 
 
-                            <h4 id="HowToRegisterGuideline" class="section-title">Guideline how to register for Workspace Access</h4>
+                            <!--<h4 id="HowToRegisterGuideline" class="section-title">Guideline how to register for Workspace Access</h4> -->
                             <ol>
                                 <li>
-                                    Click the link in the invitation email or start requesting a workspace account by visiting <a href="https://brh-portal.org/">https://brh-portal.org/</a> and logging in.
+                                    Users will receive an invitation via email to register for an NIH STRIDES workspace account. Users can click the lin in the invitation email or start requesting a workspace account by visiting.<a href="https://brh-portal.org/"> https://brh-portal.org/</a> and logging in.
                                     <br> <br>
                                     <img class="drop-shadow" src="img/brh-portal-login.png" alt="brh-portal-login" style="width:80%">
                                     <figcaption style="width:100%">
