Corrections to Document based on redline
Corrected typo on line 470 and 522.
Revised wording on line 470.
changed "more permanent" to "extended" access throughout.

--- a/brhstaging.data-commons.org/dashboard/Public/index.html
+++ b/brhstaging.data-commons.org/dashboard/Public/index.html
@@ -74,7 +74,7 @@
                     <a href="#RegisterForWorkspaces">b) Register for Workspaces</a>
                     <div class="ul-sidenav-sub-sub">
                         <a href="#HowtoRegisterTempGuideline">Guideline how to register for Temporary Workspace Access</a>
-                        <a href="#HowtoRegisterPermGuideline">Guideline how to register for more Permanent Workspace Access</a>
+                        <a href="#HowtoRegisterPermGuideline">Guideline how to register for more Extended Workspace Access</a>
                     </div>
 
                     <a href="#LoginPage">c) Login Page</a>
@@ -414,7 +414,7 @@
                                         <a href="#RegisterForWorkspaces" style="background-image: url('img/brh-portal-login-strides.png');"></a>
                                         <div class="details">
                                             <h6><a href="#RegisterForWorkspaces">Register for Workspaces</a></h6>
-                                            <p class="image-author">Get a temporary free trial to BRH workspaces and parallely register for more permanent workspace access with NIH STRIDES.</p>
+                                            <p class="image-author">Get a temporary free trial to BRH workspaces and parallely register for extended workspace access with NIH STRIDES.</p>
                                         </div>
                                     </li>
                                     <li>
@@ -467,7 +467,7 @@
 
                             <h3 id="RegisterForWorkspaces" class="section-title">b) Register for Workspaces</h3>
                             <p>
-                                To start exploring BRH Workspaces right away, users can apply for a) temporary trial access to BRH workspaces, b) more permanent access to BRH workspaces using NIH STRIDES.The more permanent access to BRH Workspaces is granted using the NIH STRIDES workspace account, and takes a few weeks to be fully approved. Please see below for more details.
+                                To start exploring BRH Workspaces right away, users can apply for a temporary trial access to BRH workspaces, or extended access to BRH workspaces using NIH STRIDES. Extended access to BRH Workspaces is granted using the NIH STRIDES workspace account, and takes a few weeks to be fully approved. Please see below for more details.
                             </p>
 
                            <h4 id="HowtoRegisterTempGuideline" class="section-title">Guidelines for Temporary Trial Access to BRH Workspaces</h4>
@@ -498,7 +498,7 @@
                             <!--<p>
                                 After receiving an invitation via email, users need to request for a <span style="font-weight: bold;">workspace account</span> to work in the workspaces of the BRH, see below for a guideline.
                             </p> -->
-                            <h4 id="HowtoRegisterPermGuideline" class="section-title">Guidelines for a more permanent Access to BRH Workspaces using STRIDES</h4>
+                            <h4 id="HowtoRegisterPermGuideline" class="section-title">Guidelines for Extended Access to BRH Workspaces using STRIDES</h4>
                             <p>
                                 The workspace account is handled with the help of <span style="font-weight: bold;">NIH STRIDES</span> (NIH <span style="font-weight: bold;">S</span>cience and
                                 <span style="font-weight: bold;">T</span>echnology <span style="font-weight: bold;">R</span>esearch <span style="font-weight: bold;">I</span>nfrastructure for <span style="font-weight: bold;">D</span>iscovery,
@@ -519,7 +519,7 @@
                             <!--<h4 id="HowToRegisterGuideline" class="section-title">Guideline how to register for Workspace Access</h4> -->
                             <ol>
                                 <li>
-                                    Users will receive an invitation via email to register for an NIH STRIDES workspace account. Users can click the lin in the invitation email or start requesting a workspace account by visiting.<a href="https://brh-portal.org/"> https://brh-portal.org/</a> and logging in.
+                                    Users will receive an invitation via email to register for an NIH STRIDES workspace account. Users can click the link in the invitation email or start requesting a workspace account by visiting.<a href="https://brh-portal.org/"> https://brh-portal.org/</a> and logging in.
                                     <br> <br>
                                     <img class="drop-shadow" src="img/brh-portal-login.png" alt="brh-portal-login" style="width:80%">
                                     <figcaption style="width:100%">
