js lib and form patch

--- a/acct.bionimbus.org/dashboard/Public/documentation-page/index.html
+++ b/acct.bionimbus.org/dashboard/Public/documentation-page/index.html
@@ -3,7 +3,8 @@
 
     <head>
         <meta http-equiv='Content-Type' content='text/html; charset=UTF-8'>
-        <link rel='stylesheet' type='text/css' href='index.css' />
+        <meta http-equiv="Content-Security-Policy" content="frame-ancestors 'none';">
+        <link rel='stylesheet' type='text/css' href='/index.css' />
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;300;400&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -504,7 +505,7 @@
                 Example on Windows:
             </p>
             <code>
-                gen3-client configure --profile=demo --cred=C:\Users\demo\Downloads\demo-credentials.json --apiendpoint=https://acct.bionimbus.org/
+                gen3-client configure --profile=demo --cred=%CD%\Users\demo\Downloads\demo-credentials.json --apiendpoint=https://acct.bionimbus.org/
             </code>
 <pre style="width:70%">
 2021/02/23 10:08:20 Profile 'demo' has been configured successfully.
