--- a/brh.data-commons.org/dashboard/Public/list_of_commons.html
+++ b/brh.data-commons.org/dashboard/Public/list_of_commons.html
@@ -16,7 +16,8 @@
         });
     </script> -->
     <meta http-equiv='Content-Type' content='text/html; charset=UTF-8'>
-    <link rel='stylesheet' type='text/css' href='index.css' />
+    <meta http-equiv="Content-Security-Policy" content="frame-ancestors 'none';">
+    <link rel='stylesheet' type='text/css' href='/index.css' />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <!-- <link href="https://fonts.googleapis.com/css2?family=Montserrat:bold, regular, italic" rel="stylesheet"> -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&family=Ubuntu:ital,wght@1,300&display=swap"
