--- a/acct.bionimbus.org/dashboard/Public/documentation-page/index.html
+++ b/acct.bionimbus.org/dashboard/Public/documentation-page/index.html
@@ -3,7 +3,7 @@
 
     <head>
         <meta http-equiv='Content-Type' content='text/html; charset=UTF-8'> 
-        <link rel='stylesheet' type='text/css' href='/index.css' />
+        <link rel='stylesheet' type='text/css' href='./index.css' />
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;300;400&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
