--- a/va.data-commons.org/dashboard/Public/maintenance-page/index.html
+++ b/va.data-commons.org/dashboard/Public/maintenance-page/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta http-equiv='Content-Type' content='text/html; charset=UTF-8'>
-    <link rel='stylesheet' type='text/css' href='index.css' />
+    <link rel='stylesheet' type='text/css' href='./index.css' />
     <link rel='icon' href='img/favicon.ico' type='image/x-icon' />
 </head>
 
