--- a/acct.bionimbus.org/dashboard/Public/documentation-page/index.html
+++ b/acct.bionimbus.org/dashboard/Public/documentation-page/index.html
@@ -504,7 +504,7 @@
                 Example on Windows:
             </p>
             <code>
-                gen3-client configure --profile=demo --cred=%CD%\Users\demo\Downloads\demo-credentials.json --apiendpoint=https://acct.bionimbus.org/
+                gen3-client configure --profile=demo --cred=C:\Users\demo\Downloads\demo-credentials.json --apiendpoint=https://acct.bionimbus.org/
             </code>
 <pre style="width:70%">
 2021/02/23 10:08:20 Profile 'demo' has been configured successfully.
