--- a/brh.data-commons.org/dashboard/Public/list_of_commons.html
+++ b/brh.data-commons.org/dashboard/Public/list_of_commons.html
@@ -170,8 +170,7 @@
         <div class='footer'>
             <div class="footer__logo-area">
                 <a href="https://ctds.uchicago.edu/gen3">
-                    <!-- <img class='footer__img' src='img/gen3.png' /> -->
-                    <img class='footer__img' src='img/gen3blue.png' />
+                    <img class='footer__img' src='img/gen3.png' />
                 </a>
                 <a href="https://ctds.uchicago.edu/">
                     <img class='footer__img' id="createdby"
