--- a/brhstaging.data-commons.org/dashboard/Public/index.html
+++ b/brhstaging.data-commons.org/dashboard/Public/index.html
@@ -182,7 +182,7 @@
                         </p>
                         <blo>
                             <a href="https://ctds.uchicago.edu/gen3">
-                                <img src="img/gen3blue.png" alt="Gen3_logo" style="width:10%">
+                                <img src="img/gen3.png" alt="Gen3_logo" style="width:10%">
                             </a>
                             </p>
                             <blockquote>
@@ -2183,7 +2183,7 @@
                                 <p>
                                     Powered by <br>
                                     <a href="https://ctds.uchicago.edu/gen3">
-                                        <img src="img/gen3blue.png" alt="Gen3_logo" style="width:10%">
+                                        <img src="img/gen3.png" alt="Gen3_logo" style="width:10%">
                                     </a>
                                 </p>
 
@@ -2198,8 +2198,7 @@
         <div class='footer'>
             <div class="footer__logo-area">
                 <a href="https://ctds.uchicago.edu/gen3">
-                    <!-- <img class='footer__img' src='img/gen3.png' /> -->
-                    <img class='footer__img' src='img/gen3blue.png' />
+                    <img class='footer__img' src='img/gen3.png' />
                 </a>
                 <a href="https://ctds.uchicago.edu/">
                     <img class='footer__img' id="createdby" src='img/ctds logo _ screen _ horizontal _ RGB colour.png' />
